--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,54 @@
-<h2>sign up</h2>
+<div class="hero min-h-screen bg-base-200">
+  <div class="hero-content flex-col lg:flex-row-reverse">
+    <div class="text-center lg:text-left">
+      <h1 class="text-5xl font-bold">Sign up now!</h1>
+      <p class="py-6">Fill out the form below to create a new account.</p>
+    </div>
+    <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+      <div class="card-body">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text"><%= f.label :name %></span>
+            </label>
+            <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "input input-bordered" %>
+          </div>
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text"><%= f.label :email %></span>
+            </label>
+            <%= f.email_field :email, autocomplete: "email", class: "input input-bordered" %>
+          </div>
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text"><%= f.label :password %></span>
+            </label>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %>
+            <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered" %>
+          </div>
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text"><%= f.label :password_confirmation %></span>
+            </label>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered" %>
+          </div>
+          <div class="form-control mt-6">
+            <%= f.submit "Sign up", class: "btn btn-primary" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<%= render "devise/shared/links" %>
+
+
+
+<h2>以下は元々のsign upフォーム</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
