--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,178 +1,136 @@
-  <section class="container py-5 mt-5 mt-md-4 mb-md-3 mb-lg-4 mb-xl-5 bg-base-200">
-    <div class="privacy flex flex-col items-center">
-      <div class="p-8 md:w-4/5">
-          <h1 class="text-2xl my-16 md:text-center font-bold">利用規約</h1>
-          <p>この利用規約(以下、「本規約」といいます。)は、本サービス(本サイトを含むものとし、以下、特に両者を区別しません。)の利用条件を定めるものです。本規約は、本サービスを利用するすべてのユーザーに適用されます。</p>
-      </div>
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>本規約への同意</h3>
-          <ol class='list-decimal px-8'>
-              <li>ユーザーは、本サービスを利用することによって、本規約に有効かつ取り消し不能な同意をしたものとみなされます。</li>
-              <li>本規約に同意しないユーザーは、本サービスをご利用いただけません。</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>利用登録</h3>
-          <ol class='list-decimal px-8'>
-              <li>本サービスにおいては、登録希望者が本規約に同意の上、当方の定める方法によって利用登録を申請し、当方がこれを承認することによって、本サービスの利用登録をすることができます。</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>登録拒否</h3>
-          <ol class='list-decimal px-8'>
-              管理者は、利用登録の申請者に以下の事由があると判断した場合、利用登録の申請を承認しないことがあります。管理者は登録拒否の理由について一切の開示義務を負いません。</li>
-              <li>虚偽の事項を届け出た場合</li>
-              <li>本規約に違反したことがある者からの申請である場合</li>
-              <li>その他、当方が利用登録を相当でないと判断した場合</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>未成年による利用</h3>
-          <ol class='list-decimal px-8'>
-              <li>ユーザーが未成年である場合には、法定代理人の同意を得た上で、本サービスを利用してください。</li>
-              <li>法定代理人の同意を得ずに本サービスのご利用を開始したユーザーが成年に達した場合、未成年者であった間の利用行為を追認したものとみなします。</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>ログイン情報の管理</h3>
-          <ol class='list-decimal px-8'>
-              <li>ユーザーは、自己の責任において、本サービスのアカウント情報(メールアドレスおよびパスワード)をを適切に管理するものとします。</li>
-              <li>ユーザーは、いかなる場合にも、アカウント情報(メールアドレスおよびパスワード)を第三者に譲渡または貸与し、もしくは第三者と共用することはできません。管理者は、メールアドレスおよびパスワードの組み合わせが登録情報と一致してログインされた場合には、そのアカウントを登録しているユーザー自身による利用とみなします。</li>
-              <li>アカウント情報(メールアドレスおよびパスワード)が第三者によって使用されたことによって生じた損害は、管理者に故意又は重大な過失がある場合を除き、管理者は一切の責任を負わないものとします。</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>禁止事項</h3>
-          <ol class='list-decimal px-8'>
-              <li>法令または公序良俗に違反する行為</li>
-              <li>犯罪行為に関連する行為</li>
-              <li>本サービスの内容等、本サービスに含まれる著作権、商標権ほか知的財産権を侵害する行為</li>
-              <li>管理者、他のユーザー、またはその他第三者のサーバーまたはネットワークの機能を破壊したり、妨害したりする行為</li>
-              <li>本サービスによって得られた情報を商業的に利用する行為</li>
-              <li>本サービスの運営を妨害するおそれのある行為</li>
-              <li>不正アクセスをし、またはこれを試みる行為</li>
-              <li>他のユーザーに関する個人情報等を収集または蓄積する行為</li>
-              <li>不正な目的を持って本サービスを利用する行為</li>
-              <li>本サービスの他のユーザーまたはその他の第三者に不利益、損害、不快感を与える行為</li>
-              <li>他のユーザーに成りすます行為</li>
-              <li>他のユーザーのアカウントを利用する行為</li>
-              <li>管理者が許諾しない本サービス上での宣伝、広告、勧誘、または営業行為</li>
-              <li>管理者のサービスに関連して、反社会的勢力に対して直接または間接に利益を供与する行為</li>
-              <li>その他、管理者が不適切と判断する行為</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>利用制限</h3>
-          <ol class='list-decimal px-8'>
-              当方は、ユーザーが以下のいずれかに該当する場合には、事前の通知なく、ユーザーに対して、本サービスの全部もしくは一部の利用を制限し、またはユーザーとしての登録を抹消することができるものとします。
-              当方は、本条に基づき当方が行った行為によりユーザーに生じた損害について、一切の責任を負いません。
-              <li>登録事項に虚偽の事実があることが判明した場合</li>
-              <li>当社からの連絡に対し、相当の期間が経過しても返答がない場合</li>
-              <li>最終のご利用日から相当期間、本サービスのご利用がない場合</li>
-              <li>反社会的勢力等であるか、反社会的勢力等との何らかの交流若しくは関与を行っていると当方が判断した場合</li>
-              <li>その他、当方が本サービスの利用を適当でないと判断した場合</li>
-          </ol>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>本サービスの提供の停止</h3>
-          <ol class='list-decimal px-8'>
-              管理者は、以下のいずれかの事由があると判断した場合、ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。当方は、この場合にユーザーまたは第三者が被ったいかなる不利益または損害についても、一切の責任を負わないものとします。
-              <ol class='list-decimal px-8'>
-                  <li>本サービスにかかるコンピュータシステムの保守点検または更新を行う場合</li>
-                  <li>地震、落雷、火災、停電または天災などの不可抗力により、本サービスの提供が困難となった場合</li>
-                  <li>コンピュータまたは通信回線等が事故により停止した場合</li>
-                  <li>その他、管理者が本サービスの提供が困難と判断した場合</li>
-              </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>退会</h3>
-          <ol class='list-decimal px-8'>
-              ユーザーは、当方の定める退会手続により、本サービスから退会できるものとします。
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>保証の否認</h3>
-          <ol class='list-decimal px-8'>
-              当方は、本サービスや本サービスが提供するコンテンツに、システムバグや第三者の権利侵害が含まれないことを保証するものではありません。また、安全性、信頼性、正確性、完全性、有効性、特定の目的への適合性を保証するものでもありません。
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>免責</h3>
-          <ol class='list-decimal px-8'>
-              <li>当方は、本サービスに関してユーザーに生じたあらゆる損害について一切の責任を負いません。ただし、本サービスに関する当方とユーザーとの間の契約（本規約を含みます。）が消費者契約法に定める消費者契約となる場合、この免責規定は適用されません。</li>
-              <li>消費者契約に該当する場合であっても、当社は、当社の過失（重過失を除きます。）によってユーザーに生じた損害のうち、ユーザーに直接かつ現実に発生した損害についてのみ賠償責任を負うものとし、また、その賠償額は、本サービスの利用料金の直近1ヶ月分または金1万円のいずれか低い方を上限とします。</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>サービス内容の変更</h3>
-          <ol class='list-decimal px-8'>
-              <li>当方は、ユーザーに通知することなく、本サービスの内容を変更したり、本サービスの提供を中止、終了することができるものとします。当方は、これによってユーザーに生じた損害について一切の責任を負いません。</li>
-          </ol>
-          </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>利用規約の変更</h3>
-          <ol class='list-decimal px-8'>
-              当方は、ユーザーに通知することなく、いつでも本規約を変更することができるものとします。変更後の本規約は、本サービスに掲示された時点から効力を生じるものとします。本規約の変更後、本サービスの利用を継続したユーザーは、変更後の本規約に同意したものとみなします。
-          </ol>
-          </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>個人情報の取扱い</h3>
-          <ol class='list-decimal px-8'>
-              <li>本サービスの利用によって取得するユーザーの個人情報については、当方のプライバシーポリシーに従い適切に取り扱うものとします。</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>通知または連絡</h3>
-          <ol class='list-decimal px-8'>
-              <li>ユーザーと当方との間の通知または連絡は、当方の定める方法によって行うものとします。当方は、ユーザーから、当方が別途定める方式に従った変更届け出がない限り、現在登録されている連絡先が有効なものとみなして当該連絡先へ通知または連絡を行い、これらは、発信時にユーザーへ到達したものとみなします。</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>権利義務の譲渡</h3>
-          <ol class='list-decimal px-8'>
-              <li>ユーザーは、当方の書面による事前の承諾なく、利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し、または担保に供することはできません。</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>適用関係</h3>
-          <ol class='list-decimal px-8'>
-              本規約は、ユーザーと当社との間の本サービスの利用に関わる一切の関係に適用されるものとします。
-              当方は本サービスに関し、本規約のほか、ご利用にあたってのルールを定めることがあります。これらのルールは、その名称のいかんに関わらず、本規約の一部を構成するものとします。本規約がこれらのルールと矛盾する場合には、これらのルールが優先して適用されるものとします。
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h3 class='font-bold py-4'>分離可能性</h3>
-          <ol class='list-decimal px-8'>
-              <li>本規約のいずれかの条項又はその一部が無効又は執行不能と判断された場合であっても、当該判断は他の部分に影響を及ぼさず、本規約の残りの部分は、引き続き有効かつ執行力を有するものとします。</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-      <h3 class='font-bold py-4'>準拠法・裁判管轄</h3>
-          <ol class='list-decimal px-8'>
-          <li>本規約の解釈にあたっては、日本法を準拠法とします。</li>
-          <li>本サービスに関して紛争が生じた場合には、管理者の所在地を管轄する裁判所を専属的合意管轄とします。</li>
-          </ol>
-      </div>
-
-      <div class="p-8 md:w-4/5">
-          <h2 class="my-4 text-start">2023年7月26日制定</h2>
-      </div>
+<section class="py-5 mt-5 mt-md-4 mb-md-3 mb-lg-4 mb-xl-5 bg-base-200" style="width: 100%; padding-left: 15px; padding-right: 15px;">
+    <div class="flex flex-col items-center">
+    <div class="p-8 md:w-4/5">
+      <h1 class="text-2xl my-16 md:text-center font-bold">利用規約</h1>
+      <p>この利用規約(以下、「本規約」といいます。)は、本サービス(本サイトを含むものとし、以下、特に両者を区別しません。)の利用条件を定めるものです。本規約は、本サービスを利用するすべてのユーザーに適用されます。</p>
     </div>
-  </section>
+
+    <div class="p-8 md:w-4/5">
+      <h3 class="font-bold py-4">本規約への同意</h3>
+      <p class="px-8">
+          本規約に同意しないユーザーは、本サービスをご利用いただけません。ユーザーは、本サービスを利用することによって、本規約に有効かつ取り消し不能な同意をしたものとみなされます。本規約に同意しないユーザーは、本サービスをご利用いただけません。</li>
+      </p>
+    </div>
+
+    <div class="p-8 md:w-4/5">
+      <h3 class="font-bold py-4">利用登録</h3>
+      <p class="px-8">
+        本サービスにおいては、登録希望者が本規約に同意の上、当方の定める方法によって利用登録を申請し、当方がこれを承認することによって、本サービスの利用登録をすることができます。
+      </p>
+    </div>
+
+    <div class="p-8 md:w-4/5">
+      <h3 class="font-bold py-4">登録拒否</h3>
+          <p class="px-8">管理者は、利用登録の申請者に以下の事由があると判断した場合、利用登録の申請を承認しないことがあります。管理者は登録拒否の理由について一切の開示義務を負いません。</p>
+      <ul class="list-disc px-12">
+          <li>虚偽の事項を届け出た場合</li>
+          <li>本規約に違反したことがある者からの申請である場合</li>
+          <li>その他、当方が利用登録を相当でないと判断した場合</li>
+      </ul>
+    </div>
+
+    <div class="p-8 md:w-4/5">
+        <h3 class="font-bold py-4">未成年による利用</h3>
+        <ul class="px-8">
+            <li>ユーザーが未成年である場合には、法定代理人の同意を得た上で、本サービスを利用してください。</li>
+            <li>法定代理人の同意を得ずに本サービスのご利用を開始したユーザーが成年に達した場合、未成年者であった間の利用行為を追認したものとみなします。</li>
+        </ul>
+    </div>
+
+<div class="p-8 md:w-4/5">
+        <h3 class="font-bold py-4">ログイン情報の管理</h3>
+        <p class="px-8">
+            ユーザーは、自己の責任において、本サービスのアカウント情報(メールアドレスおよびパスワード)をを適切に管理するものとします。
+            ユーザーは、いかなる場合にも、アカウント情報(メールアドレスおよびパスワード)を第三者に譲渡または貸与し、もしくは第三者と共用することはできません。
+            管理者は、メールアドレスおよびパスワードの組み合わせが登録情報と一致してログインされた場合には、そのアカウントを登録しているユーザー自身による利用とみなします。
+            アカウント情報(メールアドレスおよびパスワード)が第三者によって使用されたことによって生じた損害は、管理者に故意又は重大な過失がある場合を除き、管理者は一切の責任を負わないものとします。
+        </p>
+    </div>
+
+    <div class="p-8 md:w-4/5">
+        <h3 class="font-bold py-4">禁止事項</h3>
+        <ul class="list-disc px-12">
+            <li>法令または公序良俗に違反する行為</li>
+            <li>犯罪行為に関連する行為</li>
+            <li>本サービスの内容等、本サービスに含まれる著作権、商標権ほか知的財産権を侵害する行為</li>
+            <li>管理者、他のユーザー、またはその他第三者のサーバーまたはネットワークの機能を破壊したり、妨害したりする行為</li>
+            <li>本サービスによって得られた情報を商業的に利用する行為</li>
+            <li>本サービスの運営を妨害するおそれのある行為</li>
+            <li>不正アクセスをし、またはこれを試みる行為</li>
+            <li>他のユーザーに関する個人情報等を収集または蓄積する行為</li>
+            <li>不正な目的を持って本サービスを利用する行為</li>
+            <li>本サービスの他のユーザーまたはその他の第三者に不利益、損害、不快感を与える行為</li>
+            <li>他のユーザーに成りすます行為</li>
+            <li>他のユーザーのアカウントを利用する行為</li>
+            <li>管理者が許諾しない本サービス上での宣伝、広告、勧誘、または営業行為</li>
+            <li>管理者のサービスに関連して、反社会的勢力に対して直接または間接に利益を供与する行為</li>
+            <li>その他、管理者が不適切と判断する行為</li>
+        </ul>
+    </div>
+
+    <div class="p-8 md:w-4/5">
+        <h3 class="font-bold py-4">利用制限</h3>
+            <p class="px-8">
+              当方は、ユーザーが以下のいずれかに該当する場合には、事前の通知なく、ユーザーに対して、本サービスの全部もしくは一部の利用を制限し、またはユーザーとしての登録を抹消することができるものとします。
+              当方は、本条に基づき当方が行った行為によりユーザーに生じた損害について一切の責任を負わないものとします。
+            </p>
+        <ul class="list-disc px-12">
+            <li>本規約のいずれかの条項に違反した場合</li>
+            <li>登録事項に虚偽の事実があることが判明した場合</li>
+            <li>決済手段の不正使用や未払いなどがあった場合</li>
+            <li>当方からの連絡に対し、一定期間返答がない場合</li>
+            <li>本サービスについて、最終の利用から一定期間利用がない場合</li>
+            <li>その他、当方が本サービスの利用を適当でないと判断した場合</li>
+        </ul>
+    </div>
+
+<div class="p-8 md:w-4/5">
+    <h3 class="font-bold py-4">個人情報の取扱い</h3>
+    <p class="list-decimal px-8">
+        本サービスの利用によって取得するユーザーの個人情報については、当方のプライバシーポリシーに従い適切に取り扱うものとします。
+    </p>
+</div>
+
+<div class="p-8 md:w-4/5">
+    <h3 class="font-bold py-4">通知または連絡</h3>
+    <p class="list-decimal px-8">
+        ユーザーと当方との間の通知または連絡は、当方の定める方法によって行うものとします。当方は、ユーザーから、当方が別途定める方式に従った変更届け出がない限り、現在登録されている連絡先が有効なものとみなして当該連絡先へ通知または連絡を行い、これらは、発信時にユーザーへ到達したものとみなします。
+    </p>
+</div>
+
+<div class="p-8 md:w-4/5">
+    <h3 class="font-bold py-4">権利義務の譲渡</h3>
+    <p class="px-8">
+      ユーザーは、当方の書面による事前の承諾なく、利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し、または担保に供することはできません。
+    </p>
+</div>
+
+<div class="p-8 md:w-4/5">
+    <h3 class="font-bold py-4">適用関係</h3>
+    <p class="list-decimal px-8">
+        本規約は、ユーザーと当社との間の本サービスの利用に関わる一切の関係に適用されるものとします。
+        当方は本サービスに関し、本規約のほか、ご利用にあたってのルールを定めることがあります。これらのルールは、その名称のいかんに関わらず、本規約の一部を構成するものとします。
+        本規約がこれらのルールと矛盾する場合には、これらのルールが優先して適用されるものとします。
+    </p>
+</div>
+
+<div class="p-8 md:w-4/5">
+    <h3 class="font-bold py-4">分離可能性</h3>
+    <p class="list-decimal px-8">
+        本規約のいずれかの条項又はその一部が無効又は執行不能と判断された場合であっても、当該判断は他の部分に影響を及ぼさず、本規約の残りの部分は、引き続き有効かつ執行力を有するものとします。
+    </p>
+</div>
+
+<div class="p-8 md:w-4/5">
+    <h3 class="font-bold py-4">準拠法・裁判管轄</h3>
+    <p class="list-decimal px-8">
+        本規約の解釈にあたっては、日本法を準拠法とします。
+        本サービスに関して紛争が生じた場合には、管理者の所在地を管轄する裁判所を専属的合意管轄とします。
+    </p>
+</div>
+
+<div class="p-8 md:w-4/5">
+    <h2 class="my-4 text-start">2023年7月26日制定</h2>
+</div>
+</div>
+</section>
