--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer footer-center p-10 bg-blue-700">
-  <div class="grid grid-flow-col gap-4 text-base-200 rounded">
+  <div class="grid grid-flow-col gap-4 text-base-200">
     <%= link_to 'プライバシーポリシー', pages_privacy_path, class: 'link link-hover' %> 
     <%= link_to '利用規約', pages_terms_path, class: 'link link-hover' %> 
     <%= link_to 'お問い合わせ', '#', class: 'link link-hover' %> 
