選択肢を回答解説画面へのリンクに変更

--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -6,11 +6,13 @@
     <div class="p-6 m-4 bg-white rounded shadow-md flex-1">
       <% parts = choice.parts %>
 
-      <%= parts[:first_part] %>
-      <% if parts[:bold_part] %>
-        <strong class="font-bold text-red-500"><%= parts[:bold_part] %></strong>
+      <%= link_to programming_explanation_path(id: @quiz.word.id), method: :get, class: "text-decoration-none" do %>
+        <%= parts[:first_part] %>
+        <% if parts[:bold_part] %>
+          <strong class="font-bold text-red-500"><%= parts[:bold_part] %></strong>
+        <% end %>
+        <%= parts[:last_part] %>
       <% end %>
-      <%= parts[:last_part] %>
     </div>
   <% end %>
 </div>
