--- a/app/views/explanations/programming.html.erb
+++ b/app/views/explanations/programming.html.erb
@@ -19,6 +19,7 @@
 
 <h3>ここにyouglishAPI</h3>
 <h1><%= @word.name %></h1>
+
 <script src="https://youglish.com/public/js/youglish.embed.min.js"></script>
 <div id="youglish-player"></div>
 <!-- 1. The widget will replace this <div> tag. -->
@@ -27,7 +28,6 @@
 <!-- Control buttons -->
 <button id="play-button" class="btn btn-primary">Play</button>
 <button id="pause-button" class="btn btn-secondary">Pause</button>
-<button id="next-button" class="btn btn-primary">Next</button>
 <button id="prev-button" class="btn btn-secondary">Previous</button>
 
 <script>
@@ -42,8 +42,9 @@
   function onYouglishAPIReady(){
     widget = new YG.Widget("youglish-widget", {
       width: 350,
-      components:9, //search box & caption 
-      autoStart: 1, // Disable autoplay
+      components:11, //search box & caption & アクセントパネル
+      autoStart: 0, // Disable autoplay
+      restrictionMode: 1, // Enable restriction mode
       events: {
         'onFetchDone': onFetchDone,
         'onVideoChange': onVideoChange,
@@ -86,14 +87,11 @@
     widget.pause();
   });
 
-  document.getElementById('next-button').addEventListener('click', function() {
-    widget.next();
-  });
-
   document.getElementById('prev-button').addEventListener('click', function() {
     widget.previous();
   });
 </script>
+
 
 <%= link_to 'もう1問！', quiz_path(Quiz.all.pluck(:id).sample), class: 'btn btn-primary' %>
 <%= link_to 'Topへ戻る', root_path, class: 'btn btn-secondary' %>
