--- a/app/views/explanations/programming.html.erb
+++ b/app/views/explanations/programming.html.erb
@@ -1,3 +1,6 @@
+<%= javascript_include_tag 'youglish' %>
+
+
 <h1>Explanations#programming</h1>
 
 <% if @user_quiz_history.is_correct %>
@@ -20,77 +23,15 @@
 <h3>ここにyouglishAPI</h3>
 <h1><%= @word.name %></h1>
 
-<script src="https://youglish.com/public/js/youglish.embed.min.js"></script>
 <div id="youglish-player"></div>
 <!-- 1. The widget will replace this <div> tag. -->
-<div id="youglish-widget"></div>
+<div id="youglish-widget" data-word="<%= @word.name %>"></div>
 
 <!-- Control buttons -->
 <button id="play-button" class="btn btn-primary">Play</button>
 <button id="pause-button" class="btn btn-secondary">Pause</button>
 <button id="prev-button" class="btn btn-secondary">Previous</button>
 
-<script>
-  // 2. This code loads the widget API code asynchronously.
-  var tag = document.createElement('script');
-  tag.src = "https://youglish.com/public/emb/widget.js";
-  var firstScriptTag = document.getElementsByTagName('script')[0];
-  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-  // 3. This function creates a widget after the API code downloads.
-  var widget;
-  function onYouglishAPIReady(){
-    widget = new YG.Widget("youglish-widget", {
-      width: 350,
-      components:11, //search box & caption & アクセントパネル
-      autoStart: 0, // Disable autoplay
-      restrictionMode: 1, // Enable restriction mode
-      events: {
-        'onFetchDone': onFetchDone,
-        'onVideoChange': onVideoChange,
-        'onCaptionConsumed': onCaptionConsumed
-      }          
-    });
-    // 4. process the query
-    widget.fetch("<%= @word.name %>","english", "us");
-  }
-
-  var views = 0, curTrack = 0, totalTracks = 0;
-
-  // 5. The API will call this method when the search is done
-  function onFetchDone(event){
-    if (event.totalResult === 0)   alert("No result found");
-    else totalTracks = event.totalResult; 
-  }
-
-  // 6. The API will call this method when switching to a new video. 
-  function onVideoChange(event){
-    curTrack = event.trackNumber;
-    views = 0;
-  }
-
-  // 7. The API will call this method when a caption is consumed. 
-  function onCaptionConsumed(event){
-    if (++views < 3)
-      widget.replay();
-    else 
-      if (curTrack < totalTracks)  
-        widget.next();
-  }
-
-  // Control button event listeners
-  document.getElementById('play-button').addEventListener('click', function() {
-    widget.play();
-  });
-
-  document.getElementById('pause-button').addEventListener('click', function() {
-    widget.pause();
-  });
-
-  document.getElementById('prev-button').addEventListener('click', function() {
-    widget.previous();
-  });
-</script>
 
 
 <%= link_to 'もう1問！', quiz_path(Quiz.all.pluck(:id).sample), class: 'btn btn-primary' %>
