edit:youglish再生時のコントローラを変更

--- a/app/views/explanations/programming.html.erb
+++ b/app/views/explanations/programming.html.erb
@@ -30,8 +30,7 @@
 <!-- Control buttons -->
 <button id="play-button" class="btn btn-primary">Play</button>
 <button id="pause-button" class="btn btn-secondary">Pause</button>
-<button id="prev-button" class="btn btn-secondary">Previous</button>
-
+<button id="repeat-button" class="btn btn-secondary">Repeat</button>
 
 
 <%= link_to 'もう1問！', quiz_path(Quiz.all.pluck(:id).sample), class: 'btn btn-primary' %>
