シンプルなモーダルの実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <script>
+        window.currentUserId = <%= current_user.id %>;
+      </script>
+    <% end %>
     <%= yield %>
   </body>
 </html>
