fix:モーダル表示のエラーを修正（画像・ダイアログの表示OK）

--- a/app/views/explanations/programming.html.erb
+++ b/app/views/explanations/programming.html.erb
@@ -44,6 +44,7 @@
     <div class="modal-action">
       <!-- if there is a button, it will close the modal -->
       <button class="btn" onclick="document.getElementById('myModal').close()">閉じる</button>
+      <button id="nextButton" class="btn">次へ</button> <!-- 「次へ」ボタンを追加 -->
     </div>
   </div>
 </dialog>
