--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -10,7 +10,7 @@
       <%= link_to programming_explanation_path(id: @quiz.word.id, choice_id: choice.id), method: :get, class: "text-decoration-none" do %>
         <%= parts[:first_part] %>
         <% if parts[:bold_part] %>
-          <strong class="font-bold text-red-500"><%= parts[:bold_part] %></strong>
+          <strong class="font-bold "><%= parts[:bold_part] %></strong>
         <% end %>
         <%= parts[:last_part] %>
       <% end %>
