モーダルのレスポンシブ対応

--- a/app/views/quizzes/_level_up_modal.html.erb
+++ b/app/views/quizzes/_level_up_modal.html.erb
@@ -4,9 +4,9 @@
     <div class="flex space-x-4">
       <%= image_tag("keshiki169.png", alt: "Man Image") %>
     </div>
-    <div class="flex mt-2">
-      <p id="conversation-content" class="font-dotgothic text-lg bg-black text-white flex-grow pt-1 pb-1">conversations</p>
-      <button type="button" class="btn font-dotgothic ml-4" id="next-button">つぎへ</button>
+    <div class="flex md:flex-row flex-col mt-2">
+      <p id="conversation-content" class="font-dotgothic text-lg bg-black text-white flex-grow py-1 flex items-center">conversations</p>
+      <button type="button" class="btn font-dotgothic md:ml-4 ml-auto mr-auto mt-2 md:mt-0" id="next-button">つぎへ</button>
     </div>
   </form>
 </dialog>
