--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,14 +1,7 @@
-<div class="bg-base-200">
+<body>
   <header><%= render 'shared/header' %></header>
-
-  <button class="btn btn-primary">One</button>
-  <button class="btn btn-secondary">Two</button>
-  <button class="btn btn-accent btn-outline">Three</button> </ br>
-  <div class="mockup-code bg-primary text-primary-content">
-    <pre><code>テスト　can be any color!</code></pre>
-  </div>
+  <%= image_tag "keshiki.png" %>
 
   <footer><%= render 'shared/footer' %></footer>
-</div>
-
+</body>
 
