--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <div class="hero min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row-reverse">
     <div class="text-center lg:text-left">
-      <h1 class="text-5xl font-bold">Sign up now!</h1>
-      <p class="py-6">Fill out the form below to create a new account.</p>
+      <h1 class="text-5xl font-bold">さいんあっぷ</h1>
+      <p class="py-6 text-green-800">Fill out the form below to create a new account.</p>
     </div>
     <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
       <div class="card-body">
@@ -36,49 +36,12 @@
             <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered" %>
           </div>
           <div class="form-control mt-6">
-            <%= f.submit "Sign up", class: "btn btn-primary" %>
+            <%= f.submit "とうろく！", class: "btn btn-primary" %>
           </div>
         <% end %>
       </div>
     </div>
   </div>
 </div>
-
-<%= render "devise/shared/links" %>
-
-
-
-<h2>以下は元々のsign upフォーム</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
 
 <%= render "devise/shared/links" %>
