--- a/app/views/quizzes/_level_up_modal.html.erb
+++ b/app/views/quizzes/_level_up_modal.html.erb
@@ -2,7 +2,7 @@
   <form method="dialog" class="modal-box w-11/12 max-w-5xl mx-auto">
     <h3 class="text-2xl font-dotgothic font-bold text-center text-violet-900 mb-1">おめでとう！ユーザーレベルがあがったよ！</h3>
     <div class="flex space-x-4">
-      <%= image_tag("keshiki.png", alt: "Man Image") %>
+      <%= image_tag("keshiki.png", alt: "Conversation Image") %>
     </div>
     <div class="flex md:flex-row flex-col mt-2">
       <p id="conversation-content" class="font-dotgothic text-lg bg-black text-white flex-grow py-1 flex items-center">conversations</p>
