--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,7 +1,9 @@
 <%= render 'shared/header' %>
 <body class=" text-black  bg-white">
   <h1 class="font-bold mt-5 text-6xl text-center pb-5 font-yusei">もんだい！</h1>
-  <p class="mx-auto text-4xl text-center font-rocknroll">どっちのふりがながそれっぽい発音だと思う？</p>
+  <p class="mx-auto text-4xl text-center font-rocknroll break-words">どっちのふりがながそれっぽい発音になると思う？</p>
+  <p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ 次のページでは音が出るから気をつけてね</p>
+
 
   <p class="font-rowdies mx-auto text-8xl text-center mt-8 py-10"><%= @quiz.word.name %></p>
 
@@ -9,13 +11,13 @@
     <div class="flex flex-col md:flex-row justify-center items-center">
     <% @quiz_choices.shuffle.each_with_index do |choice, index| %>  
         <% bg_color = index == 0 ? 'bg-blue-500 hover:bg-blue-400' : 'bg-yellow-500 hover:bg-yellow-400' %>
-        <div class="w-96 h-48 p-6 mx-6 my-2 <%= bg_color %> rounded shadow-md text-6xl text-center font-yusei flex items-center justify-center mt-10">
+        <div class="w-96 h-48 p-6 mx-6 my-2 <%= bg_color %> rounded shadow-md text-5xl text-center font-yusei flex items-center justify-center mt-10">
           <% parts = choice.parts %>
 
           <%= link_to programming_explanation_path(id: @quiz.word.id, choice_id: choice.id), method: :get, class: "text-gray-800 text-decoration-none" do %>
             <%= parts[:first_part] %>
             <% if parts[:bold_part] %>
-              <strong class="font-bold text-black"><%= parts[:bold_part] %></strong>
+              <strong class="text-black"><%= parts[:bold_part] %></strong>
             <% end %>
             <%= parts[:last_part] %>
           <% end %>
