--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,6 +1,6 @@
+<%= javascript_include_tag 'level_up' %>
 <%= render 'shared/header' %>
-<body class=" text-black  bg-white">
-  <h1 class="font-bold mt-5 text-6xl text-center pb-5 font-yusei">もんだい！</h1>
+<body data-quiz-id="<%= @quiz.id %>" class="text-black bg-white">  <h1 class="font-bold mt-5 text-6xl text-center pb-5 font-yusei">もんだい！</h1>
   <p class="mx-auto text-4xl text-center font-rocknroll break-words">どっちのふりがながそれっぽい発音になると思う？</p>
   <p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ 次のページでは音が出るから気をつけてね</p>
 
@@ -28,15 +28,6 @@
 
   <% if @level_up %>
     <%= render 'level_up_modal' %>
-    <script>
-      window.currentUser = {
-        id: "<%= current_user.id %>",
-        token: "<%= form_authenticity_token %>"
-      };
-      window.conversationsData = <%= @conversations.map(&:content).to_json.html_safe %>;
-      window.speakersData = <%= @conversations.map(&:speaker).to_json.html_safe %>;
-    </script>
-    <%= javascript_include_tag 'level_up' %>
   <% end %>
 </body>
 
