ライブラリページの画面遷移と解説ぺーじのUI完成（一覧UI未）

--- a/app/views/explanations/programming.html.erb
+++ b/app/views/explanations/programming.html.erb
@@ -5,8 +5,8 @@
   <h1 class="font-rowdies text-lg text-center text-rose-900 mt-5">Fantastic！</h1>
   <h1 class="font-yusei text-6xl text-center text-rose-900">ふぁんてぇぁぁぁあすてぃっく！</h1>
 <% else %>
-    <h1 class="font-rowdies text-lg text-center text-blue-800 mt-5">Nice try<span class="font-yusei text-lg text-center text-blue-900 mt-5">（惜しい！）</span></h1>
-    <h1 class="font-yusei text-6xl text-center text-blue-800">ないすちゅらい</h1>
+    <h1 class="font-rowdies text-lg text-center text-blue-800 mt-5">Nice try</h1>
+    <h1 class="font-yusei text-6xl text-center text-blue-800">ないすちゅらい（惜しい）</h1>
 <% end %>
 
 <div class="flex flex-col lg:flex-row items-center lg:justify-between">
