--- a/app/views/explanations/english.html.erb
+++ b/app/views/explanations/english.html.erb
@@ -1,4 +1,3 @@
-<%= javascript_include_tag 'youglish' %>
 <%= render 'shared/header' %>
 
 <div class="flex flex-col lg:flex-row items-center lg:justify-between">
@@ -38,5 +37,5 @@
 
 <div class="text-right mr-10">
   <%= link_to 'Xでシェア(準備中)','#', class: 'btn font-rocknroll' %>
-  <%= link_to 'もどる（準備中）', '#', class: 'btn bg-orange-700 hover:bg-orange-500 font-rocknroll text-white' %>
+  <%= link_to 'もどる', words_path, class: 'btn bg-orange-700 hover:bg-orange-500 font-rocknroll text-white' %>
 </div>
