--- a/app/views/explanations/english.html.erb
+++ b/app/views/explanations/english.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag 'youglish' %>
 <%= render 'shared/header' %>
 
 <div class="flex flex-col lg:flex-row items-center lg:justify-between">
