--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,20 +1,11 @@
 <%= render 'shared/header' %>
-<h1>Words List</h1>
-  <p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ 次のページでは音が出るから気をつけてね</p>
+<p class="mx-auto text-4xl text-center font-rocknroll break-words">気になる単語をクリック！</p>
+<p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ 次のページでは音が出るから気をつけてね</p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody>
+<div class="mockup-code mt-3 mx-28 bg-gray-600 text-white">
     <% @words.each do |word| %>
-      <tr>
-        <td>
-          <%= link_to word.name, english_explanation_path(word) %>
-        </td>
-      </tr>
+      <code class="hover:bg-yellow-500 hover:text-gray-900 text-lg px-3 ml-1">
+        <%= link_to word.name, english_explanation_path(word) %>
+      </code>
     <% end %>
-  </tbody>
-</table>
+</div>
