ヘッダー微調整

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
   <div class="hero-content flex-col lg:flex-row-reverse">
     <div class="text-center lg:text-left">
       <h1 class="text-5xl font-bold">さいんあっぷ</h1>
-      <p class="py-6 text-green-800">Fill out the form below to create a new account.</p>
+      <p class="py-6 text-green-800"><%= link_to "ログインはこちら", new_user_session_path %></p>
     </div>
     <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
       <div class="card-body">
