--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,8 @@
 <body class="relative min-h-screen">
   <header class="fixed top-0 w-full"><%= render 'shared/header' %></header>
-  
+  <div class="mt-5">
+    <%= image_tag("edo2.png", alt: "Top Image") %>
+  </div>
 </body>
 
-<p>ここにフッター</p>
+<footer><%= render 'shared/footer' %></footer>
