--- a/app/views/quizzes/_level_up_modal.html.erb
+++ b/app/views/quizzes/_level_up_modal.html.erb
@@ -1,9 +1,9 @@
 <dialog id="level-up-modal" class="modal">
   <form method="dialog" class="modal-box w-11/12 max-w-5xl mx-auto">
     <% if @user.level == 0 %>
-      <h3 class="text-2xl font-dotgothic font-bold text-center text-violet-900 mb-1">プロローグ</h3>
+      <h3 class="text-2xl font-dotgothic font-bold text-center text-violet-900 mb-1">〜プロローグ〜</h3>
       <div class="flex space-x-4">
-        <%= image_tag("keshiki.png", alt: "Prologue Image") %>
+        <%= image_tag("keshiki0.png", alt: "Prologue Image") %>
       </div>
     <% else %>
       <h3 class="text-2xl font-dotgothic font-bold text-center text-violet-900 mb-1">おめでとう！ユーザーレベルがあがったよ！</h3>
