--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -32,7 +32,7 @@
         <% else %>
       <li>
         <details>
-          <summary class="btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white mr-10 px-8 text-lg">
+          <summary class="btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white mr-4 px-8 text-lg">
             おためし
           </summary>
           <ul class="p-2 bg-base-300 text-black text-lg">
@@ -41,6 +41,9 @@
           </ul>
         </details>
       </li>
+        <div class="header-loggedout btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white font-yusei px-8 text-lg mr-3">
+          <%= link_to "会員登録", new_user_registration_path %>
+        </div>
       <li>
         <div class="header-loggedout btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white font-yusei px-8 text-lg mr-5">
           <%= link_to "ログイン", new_user_session_path %>
