tutorialのメソッド名をshowからquiz_showに

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,6 +4,6 @@
     <%= link_to '利用規約', pages_terms_path, class: 'link link-hover text-base-200 text-lg' %> 
   </div> 
   <div class="grid grid-flow-col gap-4">
-    <p class="text-base-200 text-lg">Copyright © <%= Time.current.year %> - All right reserved by はつめい屋 英語えもん</p>
+    <p class="text-base-200 text-lg">Copyright © <%= Time.current.year %> - All rights reserved by はつめい屋 英語えもん</p>
   </div>
 </footer>
