--- a/app/views/tutorials/quiz_explanation.html.erb
+++ b/app/views/tutorials/quiz_explanation.html.erb
@@ -44,6 +44,6 @@
 </div>
 
 <div class="text-right mr-10">
-    <%= link_to "次の問題へ", next_tutorial_path(@quiz), method: :get , class: 'btn font-rocknroll' %>
-    <%= link_to '会員登録', new_user_registration_path, class: 'btn bg-orange-600 hover:bg-orange-500 font-rocknroll text-white' %>
+    <%= link_to "次の問題へ", next_tutorial_path(@quiz), method: :get , class: 'btn bg-blue-600 hover:bg-blue-500 font-yusei text-white' %>
+    <%= link_to '会員登録', new_user_registration_path, class: 'btn bg-orange-600 hover:bg-orange-500 font-yusei text-white' %>
 </div>
