--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -36,7 +36,7 @@
             おためし
           </summary>
           <ul class="p-2 bg-base-300 text-black text-lg">
-            <li><%= link_to 'もんだい（3問）', tutorial_path(1) %></li>
+            <li><%= link_to 'もんだい（3問）', quiz_show_tutorial_path(1) %></li>
             <li><a>図書館</a></li>
           </ul>
         </details>
