--- a/app/views/tutorials/library_explanation.html.erb
+++ b/app/views/tutorials/library_explanation.html.erb
@@ -38,5 +38,5 @@
 
 <div class="text-right mr-10">
   <%= link_to 'もどる', library_index_tutorials_path, class: 'btn bg-blue-600 hover:bg-blue-500 font-yusei text-white' %>
-  <%= link_to '会員登録', new_user_registration_path, class: 'btn bg-orange-600 hover:bg-orange-500 font-yusei text-white' %>
+  <%= link_to '会員登録', new_user_registration_path, class: 'btn bg-orange-600 hover:bg-orange-500 font-yusei text-white mb-3' %>
 </div>
