--- a/app/views/tutorials/library_index.html.erb
+++ b/app/views/tutorials/library_index.html.erb
@@ -6,7 +6,7 @@
 <div class="mockup-code mt-3 mb-10 mx-28 bg-gray-600 text-white">
   <% @words.each do |word| %>
     <% if word.id == 1 || word.id == 4 || word.id == 7 %>
-      <code class="hover:bg-yellow-500 hover:text-gray-900 text-2xl px-3 ml-1">
+      <code class="hover:bg-yellow-500 hover:text-gray-900 text-2xl px-3 ml-1 text-blue-300">
         <%= link_to word.name, library_explanation_tutorials_path(word_id: word.id) %>
       </code>
     <% else %>
