--- a/app/views/explanations/english.html.erb
+++ b/app/views/explanations/english.html.erb
@@ -37,6 +37,6 @@
 </div>
 
 <div class="text-right mr-10">
-  <%= link_to 'Xでシェア(準備中)','#', class: 'btn font-rocknroll' %>
+  <%= link_to 'Xでシェア', "https://twitter.com/intent/tweet?text=「#{@word.name}」は「#{@word.furigana}」って言ってみよっと！&hashtags=eigoemon&url=http://localhost:3000#{root_path}", class: 'btn font-rocknroll bg-blue-600 hover:bg-blue-500 text-white', target: "_blank" %>
   <%= link_to 'もどる', words_path, class: 'btn bg-orange-700 hover:bg-orange-500 font-rocknroll text-white' %>
 </div>
