--- a/app/views/explanations/programming.html.erb
+++ b/app/views/explanations/programming.html.erb
@@ -1,4 +1,5 @@
 <%= render 'shared/header' %>
+<%= javascript_include_tag 'youglish' %>
 
 <% if @user_quiz_history.is_correct %>
   <h1 class="font-rowdies text-lg text-center text-rose-900 mt-5">Fantastic！</h1>
